<resources>
    <string name="app_name" translatable="false">TimeCare+</string>
    <string name="create">Create</string>

    <string name="empty_notes">Once you add some tasks you will find them here</string>


    <string name="fragment_thur">Thursday</string>


    <string name="editor_title_hint">Enter Task Name</string>
    <string name="editor_desc_hint">Enter Description (Optional)</string>
    <string name="subject_name_required">Task name required</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="select_day">Select Day</string>
    <string name="select_time">Select Start Time</string>
    <string name="task_added">Task Added</string>
    <string name="task_updated">Task Updated</string>


    <string name="press_again_exit_app">Press again to exit</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="_7am_8am" translatable="false">• 7AM - 8AM</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="normal">Normal</string>
    <string name="schedule">Schedule</string>
    <string name="f" translatable="false">F</string>
    <string name="s" translatable="false">S</string>
    <string name="t" translatable="false">T</string>
    <string name="w" translatable="false">W</string>
    <string name="m" translatable="false">M</string>


    <string name="settings">Settings</string>


    <string name="are_you_sure">Are you sure?</string>
    <string name="want_delete_task">You want to delete this task!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_latest_version">Download Latest Version from Google Play Store</string>
    <string name="ok">OK</string>

    <string name="delete_all_tasks">Delete All Tasks</string>
    <string name="want_all_delete_task">You want to delete all tasks?</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="all_tasks_deleted">All Tasks Deleted</string>

    <string-array name="days">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

    <!-- Language Names in English  -->

    <!-- Language Names in Native  -->

    <!-- Preference related -->
    <string name="alarm">Alarm</string>
    <string name="stop">Stop</string>
    <string name="open">OPEN</string>


</resources>