<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:animateLayoutChanges="true">



    <LinearLayout
        android:id="@+id/timeTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_marginStart="5dp"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_schedule"
             />

        <TextView
            style="@style/TextStyle.Pinnit.Subtitle1.ScheduleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/schedule"
            android:visibility="visible"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fromToRL"
        android:layout_below="@+id/timeTextView"
        android:weightSum="100"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleFromTimeButton"
        style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
        android:layout_marginEnd="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="45"
        app:icon="@drawable/ic_arrow_drop_down"
        android:text="@string/start"
        tools:visibility="visible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleToTimeButton"
        android:layout_marginStart="5dp"
        style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="45"
        app:icon="@drawable/ic_arrow_drop_down"
        android:text="@string/end"
        tools:visibility="visible" />


    </LinearLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/enableNotificationCheckBox"
        android:layout_below="@+id/fromToRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enable_notification"
        android:textAppearance="@style/TextAppearance.Pinnit.Button"
        android:textColor="@color/schedule_checkbox_state"
        app:buttonTint="@color/schedule_checkbox_state"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/priorityButtonGroup"
        android:layout_below="@+id/enableNotificationCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:checkedButton="@id/normalPriorityButton"
        app:selectionRequired="true"
        app:singleSelection="true"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/normalPriorityButton"
            style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/normal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/highPriorityButton"
            style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm" />


    </com.google.android.material.button.MaterialButtonToggleGroup>


    <ImageView
        android:layout_below="@+id/priorityButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:srcCompat="@drawable/divider" />

</RelativeLayout>
