<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/update"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/bai_jam_bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Pinnit.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subjectEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_title_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="@style/TextAppearance.Pinnit.Headline6"
                    tools:text="@string/editor_title_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Pinnit.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_desc_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="@style/TextAppearance.Pinnit.Headline6"
                    tools:text="@string/editor_desc_hint" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/firstDayGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16sp"
                app:selectionRequired="false"
                app:singleSelection="true"
                android:visibility="gone"
                tools:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sun"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mon"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tue"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/t" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wed"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/w" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/thur"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/t" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fri"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/f" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sat"
                    style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s" />



            </com.google.android.material.button.MaterialButtonToggleGroup>

            <include
                layout="@layout/schedule_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/view"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/back_bottom_bar"
        android:background="@color/line"
        />

    <include
        android:id="@+id/back_bottom_bar"
        android:layout_alignParentBottom="true"
        layout="@layout/update_bottom_bar"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />


</RelativeLayout>
