<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by guruLabs on 1/2/21 1:49 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 1/2/21 1:49 PM
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlarmActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="144dp"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        app:cardElevation="10dp"
        app:rippleColor="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bai_jam_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/open_app"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/open"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_below="@id/toolbar"
                />

            <RelativeLayout
                android:id="@+id/title_desc_RL"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/subjectNameTextView"
                    style="@style/TextStyle.Pinnit.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimary"
                    android:translationY="4sp"
                    tools:text="Physics" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/subjectDescTextView"
                    style="@style/TextStyle.Pinnit.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subjectNameTextView"
                    android:textColor="#B21F0014"
                    tools:maxLines="4"
                    tools:text="@tools:sample/lorem/random" />



            </RelativeLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/divider2"
                android:layout_below="@+id/title_desc_RL"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/clock">


            </com.airbnb.lottie.LottieAnimationView>

            <View
                android:id="@+id/divider2"
                android:layout_above="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/line" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_button"
                style="@style/Widget.Pinnit.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/stop"
                android:transitionName="second_shared" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
